--- a/04_website/index.html
+++ b/04_website/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logistic Website</title>
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"></link>
+    <link href="../assets/styles/main.css" rel="stylesheet"></link>
 </head>
 <body>
+    <div id="main">
+        <div class="top">
+            <img src="logo.jpg">
+            <h1>Logistic Website Title</h1>
+        </div>    
+        <div id="contact">
+            <ul>
+                <li><a href="contact-me">9876543210</a></li>
+                <li><a href="#email">ashathullah5@gmail.com</a></li>
+                <li><a href="#link">want to create like this</a></li>
+            </ul>
+        </div>
+        <nav class="navbar navbar-light bg-light">
+            <form class="form-inline">
+                <button class="btn btn-outline-success" type="button">home</button>
+                <button class="btn btn-outline-success" type="button">profile</button>
+                <button class="btn btn-outline-success" type="button">key services</button>
+                <button class="btn btn-outline-success" type="button">enquiry</button>
+                <button class="btn btn-outline-success" type="button">contact</button>
+            </form>
+        </nav>
+        <div id="middle">
+            <button type="button" class="btn btn-primary">New Button</button>
+        </div>
+    </div>
     <!-- wrapper -->
         <!-- Navbar -->
         <!-- banner -->
