created another website

--- a/app/02_Login-form/index.html
+++ b/app/02_Login-form/index.html
@@ -10,7 +10,7 @@
             <form>
                 <h3>Login form</h3>
                 <lable class="ftext" for="username">Username</lable><br>
-                <input class="bar" type="text" id="username" name="name"><br><br>
+                <input class="bar" type="text" id="username" name="name" value="name"><br><br>
                 <lable class="ftext" for="userpassword">Password</lable><br>
                 <input class="bar" type="password" id="userpassword" name="password"><br><br>
                 <button type="submit">Sign in</button><br><br>
