--- a/app/03_simple-website/index.html
+++ b/app/03_simple-website/index.html
@@ -27,27 +27,27 @@
        <div id="images">
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="img1.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img1.jpg">
                     <p>alaska</p>
                 </div>
                 <div class="grid-item">
-                    <img src="img2.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img2.jpg">
                     <p>pune</p>
                 </div>
                 <div class="grid-item">
-                    <img src="img3.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img3.jpg">
                     <p>himalayas</p>
                 </div>
                 <div class="grid-item">
-                    <img src="img4.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img4.jpg">
                     <p>island</p>
                 </div>
                 <div class="grid-item">
-                    <img src="img2.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img2.jpg">
                     <p>pune</p>
                 </div>
                 <div class="grid-item">
-                    <img src="img3.jpg">
+                    <img src="C:/Users/ashat/projects/learn-frontend/assets/images/img3.jpg">
                     <p>himalayas</p>
                 </div>
        </div>
