--- a/app/04_website/index.html
+++ b/app/04_website/index.html
@@ -229,18 +229,18 @@
                                     <p>+974 4431 6636</p>
                                 </li>
                             </ul>
-                        </div>    
+                        </div>        
                     </div>
-                    <footer>
-                        <p>© 2017 All rights reserved. | Powered by Media1 Advertising in association with Meridian Solutions Inc</p>
-                        <div class="imagelinks">
-                            <a href="#"><img src="../../assets/images/whatsapplogo.jpg"></a>
-                            <a href="#"><img src="../../assets/images/facebooklogo.png"></a>
-                            <a href="#"><img src="../../assets/images/instagramlogo.jpg"></a>
-                            <a href="#"><img src="../../assets/images/youtubelogo.png"></a>
-                        </div>
-                    </footer>
                 </div>
+            </div>
+        </div>
+        <div class="bottem-bar clearfix">
+            <p>© 2017 All rights reserved. | Powered by Media1 Advertising in association with Meridian Solutions Inc</p>
+            <div class="imagelinks">
+                <a href="#"><img src="../../assets/images/whatsapplogo.jpg"></a>
+                <a href="#"><img src="../../assets/images/facebooklogo.png"></a>
+                <a href="#"><img src="../../assets/images/instagramlogo.jpg"></a>
+                <a href="#"><img src="../../assets/images/youtubelogo.png"></a>
             </div>
         </div>
         <!-- wrapper -->
